# SomeGame

./: .clang-format  .gitignore  CMakeLists.txt  config.toml  main.cpp  test.frag  test.vert
include/: Config.h
src/: main.cpp
